# tv-archiver

./: Cargo.toml  README.md  config.example.yml
src/: main.rs  metadata.rs
src/source_collector/: glob_source_collector.rs  mod.rs
