[package]
name = "tv-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
mktemp = "0.5.0"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
